# vofa-bridge

./: .gitignore  CMakeLists.txt  example.cpp  vofa_bridge.hpp  xmake.lua
example/: CMakeLists.txt  example.cpp
include/vofa_bridge/: vofa_bridge.h
intermediary/: CMakeLists.txt  intermediary.cpp
player/: CMakeLists.txt  player.cpp
src/: vofa_bridge.cpp
